upload of basics

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="UTF-8">
-    <title></title>
+    <title>UNISHOP</title>
 </head>
 <body>
-
+<header>
+    <div class="container">
+    <div class="tab-button active">unishop</div>
+    <div class="tab-button">twister</div>
+    <div class="tab-button">rockstar's</div>
+    <a class="newStuff" href="#">
+        <div class="rectangle">
+            <p>Super New Stuff is here!!</p>
+            <span>&#x2605;</span>
+        </div>
+        <div class="triangle">
+        </div>
+    </a>
+    </div>
+</header>
+<nav></nav>
+<section>Carousel</section>
+<section>advertisement</section>
+<section>goods</section>
+<section>social</section>
+<section>twitter</section>
+<section>map</section>
+<footer></footer>
+<script src="js/jquery-1.12.2.min.js"></script>
 <script src="scripts.js"></script>
 </body>
 </html>
