--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta charset="UTF-8">
     <title>UNISHOP</title>
 </head>
 <body>
 <header>
     <div class="container">
-    <div class="tab-button active">unishop</div>
-    <div class="tab-button">twister</div>
-    <div class="tab-button">rockstar's</div>
-    <a class="newStuff" href="#">
+        <ul class="tabs">
+            <li class="active">unishop</li>
+            <li>twister</li>
+            <li>rockstar's</li>
+        </ul>
+    <a class="notification" href="#">
         <div class="rectangle">
             <p>Super New Stuff is here!!</p>
             <span>&#x2605;</span>
