--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
 </head>
 <body>
 <header>
-    <div class="container">
+    <div class="tab-group">
+        <div class="container">
         <ul class="tabs">
             <li class="active">unishop</li>
             <li>twister</li>
-            <li>rockstar's</li>
+            <li>RockStar's</li>
         </ul>
+        </div>
+    </div>
+    <div class="container">
+
     <a class="notification" href="#">
         <div class="rectangle">
             <p>Super New Stuff is here!!</p>
@@ -21,6 +26,25 @@
         <div class="triangle">
         </div>
     </a>
+        <div class="logo"></div>
+        <div class="currency">
+            <div class="flag"></div>
+            <div>
+                <label for="currency"></label>
+                <select id="currency">
+                    <option value="1">&#163; GBP</option>
+                    <option value="2">&#8364; EUR</option>
+                    <option value="3">$ AUD</option>
+                    <option value="4">$ USD</option>
+                </select>
+            </div>
+        </div>
+        <div class="MyAccount">
+            <a href="#" class="account">My account</a> <span class="PCOnly"><a href="#">Saved items</a></span>
+            <a href="#" class="cart">Cart</a>
+            <span class="cartQuantity">(<span id="counting">0</span>)</span>
+            <div class="TotalSum">$<span id="TotalSum">0.00</span></div>
+        </div>
     </div>
 </header>
 <nav></nav>
@@ -32,6 +56,6 @@
 <section>map</section>
 <footer></footer>
 <script src="js/jquery-1.12.2.min.js"></script>
-<script src="scripts.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
