--- a/index.html
+++ b/index.html
@@ -47,7 +47,25 @@
         </div>
     </div>
 </header>
-<nav></nav>
+<nav>
+    <div class="container">
+        <ul>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Children</a></li>
+            <li><a href="#">Sale</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Locator</a></li>
+        </ul>
+        <div class="search-wrapper">
+            <form id="newsearch">
+                <label for="search"></label>
+                <input type="text" id="search" class="search-input" size="35" maxlength="30" value="Search please"><button type="submit" class="search-button">
+            </form>
+        </div>
+        <div class="clear"></div>
+    </div>
+</nav>
 <section>Carousel</section>
 <section>advertisement</section>
 <section>goods</section>
