after carousel beginning

--- a/index.html
+++ b/index.html
@@ -66,8 +66,41 @@
         <div class="clear"></div>
     </div>
 </nav>
-<section>Carousel</section>
-<section>advertisement</section>
+<section class="carousel-wrapper">
+    <div class="container">Carousel</div>
+</section>
+<section class="adv-wrapper">
+    <div class="container">
+        <div class="adv-topic">
+            <h3>the finest quality</h3>
+        </div>
+        <div class="adv-wrapper">
+            <div class="jackets adv-blocks">
+                <p>Jackets</p>
+            </div>
+            <div class="suites adv-blocks">
+                <p>Suites</p>
+            </div>
+            <div class="jerseys adv-blocks">
+                <p>Jerseys</p>
+            </div>
+            <div class="shoes adv-blocks">
+                <p>Shoes</p>
+            </div>
+        </div>
+        <div class="adv-text">
+            <h2>Mauris Iaculis Porttitor Posuere.
+                Praesent Id Metus Massa</h2>
+            <p>Donec congue lacinia dui, a porttitor
+                lectus condimentum laoreet.
+                Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum
+                faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla
+                at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet
+                egestas purus in blandit.
+            </p>
+        </div>
+    </div>
+</section>
 <section>goods</section>
 <section>social</section>
 <section>twitter</section>
