--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         </div>
     </div>
     <div class="container">
-
-    <a class="notification" href="#">
+    <div class="notification">
+    <a href="#">
         <div class="rectangle">
-            <p>Super New Stuff is here!!</p>
+            <span>Super New Stuff is here!!</span><br/>
             <span>&#x2605;</span>
         </div>
         <div class="triangle">
         </div>
     </a>
-        <div class="logo"></div>
+    </div>
+        <div class="logo"><a href="#"><img src="images/thumbnails/logofull.png"/></a></div>
         <div class="currency">
             <div class="flag"></div>
             <div>
@@ -60,7 +61,7 @@
         <div class="search-wrapper">
             <form id="newsearch">
                 <label for="search"></label>
-                <input type="text" id="search" class="search-input" size="35" maxlength="30" value="Search please"><button type="submit" class="search-button">
+                <input type="text" id="search" class="search-input" size="35" maxlength="30" value="Search please"><button type="submit" class="search-button"></button>
             </form>
         </div>
         <div class="clear"></div>
@@ -101,7 +102,96 @@
         </div>
     </div>
 </section>
-<section>goods</section>
+<section class="goods">
+            <div class="goods-topic">
+                Popular products
+            </div>
+        <div class="goods-subtopic">
+            View All
+        </div>
+        <div class="goods-main-block">
+            <div class="goods-block">
+                <div class="boot1-pic goods-pic"></div>
+                <div class="price-tag">
+                    <p class="price-name">Dark Brogues</p>
+                    <div class="smallLine"></div>
+                    <p class="price">$ 65.07</p>
+                </div>
+                <a href="#" class="add-to-cart">Add to Cart</a>
+            </div>
+            <div class="goods-block">
+                <div class="boot2-pic goods-pic"></div>
+                <div class="price-tag">
+                    <p class="price-name">Leather hightops</p>
+                    <div class="smallLine"></div>
+                    <p class="price">$ 65.07</p>
+                </div>
+                <a href="#" class="add-to-cart">Add to Cart</a>
+            </div>
+            <div class="goods-block">
+                <div class="sale">sale</div>
+                <div class="boot3-pic goods-pic"></div>
+                <div class="price-tag">
+                    <p class="price-name">gray brogues</p>
+                    <div class="smallLine"></div>
+                    <p class="price"><s>$ 65.07</s> <span class="discount">$ 38.00</span></p>
+                </div>
+                <a href="#" class="add-to-cart">Add to Cart</a>
+            </div>
+            <div class="goods-block">
+                <div class="boot4-pic goods-pic"></div>
+                <div class="price-tag">
+                    <p class="price-name">dark brogues</p>
+                    <div class="smallLine"></div>
+                    <p class="price">$ 65.07</p>
+                </div>
+                <a href="#" class="add-to-cart">Add to Cart</a>
+            </div>
+        </div>
+            <div class="goods-topic">just arrived</div>
+        <div class="goods-subtopic">
+            View All
+        </div>
+        <div class="goods-main-block">
+            <div class="goods-block">
+                <div class="boot5-pic goods-pic"></div>
+                <div class="price-tag">
+                    <p class="price-name">dark brogues</p>
+                    <div class="smallLine"></div>
+                    <p class="price">$ 65.07</p>
+                </div>
+                <a href="#" class="add-to-cart">Add to Cart</a>
+            </div>
+            <div class="goods-block">
+                <div class="boot6-pic goods-pic"></div>
+                <div class="price-tag">
+                    <p class="price-name">leather hightops</p>
+                    <div class="smallLine"></div>
+                    <p class="price">$ 65.07</p>
+                </div>
+                <a href="#" class="add-to-cart">Add to Cart</a>
+            </div>
+            <div class="goods-block">
+                <div class="new">new</div>
+                <div class="boot7-pic goods-pic"></div>
+                <div class="price-tag">
+                    <p class="price-name">dark brogues</p>
+                    <div class="smallLine"></div>
+                    <p class="price">$ 38.00</p>
+                </div>
+                <a href="#" class="add-to-cart">Add to Cart</a>
+            </div>
+            <div class="goods-block">
+                <div class="boot8-pic goods-pic"></div>
+                <div class="price-tag">
+                    <p class="price-name">dark brogues</p>
+                    <div class="smallLine"></div>
+                    <p class="price">$ 65.07</p>
+                </div>
+                <a href="#" class="add-to-cart">Add to Cart</a>
+            </div>
+        </div>
+</section>
 <section>social</section>
 <section>twitter</section>
 <section>map</section>
