--- a/index.html
+++ b/index.html
@@ -67,10 +67,20 @@
         <div class="clear"></div>
     </div>
 </nav>
-<section class="carousel-wrapper">
-    <div class="container">Carousel</div>
+<section class="carousel">
+    <div class="container">
+        <div class="carousel-wrapper">
+            <div class="prev"></div>
+            <div class="next"></div>
+            <ul class="content">
+                <li id="photo1" class="carousel-element active"><div class="carousel-image-1"></div></li>
+                <li id="photo2" class="carousel-element"><div class="carousel-image-2"></div></li>
+                <li id="photo3" class="carousel-element"><div class="carousel-image-3"></div></li>
+            </ul>
+        </div>
+    </div>
 </section>
-<section class="adv-wrapper">
+<section class="advertisement">
     <div class="container">
         <div class="adv-topic">
             <h3>the finest quality</h3>
@@ -103,6 +113,7 @@
     </div>
 </section>
 <section class="goods">
+    <div class="container">
             <div class="goods-topic">
                 Popular products
             </div>
@@ -191,8 +202,58 @@
                 <a href="#" class="add-to-cart">Add to Cart</a>
             </div>
         </div>
+        </div>
 </section>
-<section>social</section>
+<section class="social">
+    <div class="container">
+        <div class="social-main-block">
+    <div class="social-block">
+        <div class="social-image-1"></div>
+        <div class="social-topic">
+            outfits & looks
+        </div>
+        <div class="social-text">
+            Create outfits, share and rate looks. adawdawdawdaw-
+        </div>
+        <a href="#" class="social-link">
+            <img src="images/thumbnails/border-left.png" alt="border">
+            view fashion finder
+            <img src="images/thumbnails/border-right.png" alt="border">
+        </a>
+    </div>
+            <div class="social-line"></div>
+    <div class="social-block">
+        <div class="social-image-2"></div>
+        <div class="social-topic">
+            daily edit
+        </div>
+        <div class="social-text">
+            The best of New In edited for work, weekends and going out.
+        </div>
+        <a href="#" class="social-link">
+            <img src="images/thumbnails/border-left.png" alt="border">
+            view daily edit
+            <img src="images/thumbnails/border-right.png" alt="border">
+        </a>
+    </div>
+            <div class="social-line"></div>
+    <div class="social-block">
+        <div class="social-image-3"></div>
+        <div class="social-topic">
+            magazine
+        </div>
+        <div class="social-text">
+            UNISHOP Magazine free to your iPhone every week.
+        </div>
+        <a href="#" class="social-link">
+            <img src="images/thumbnails/border-left.png" alt="border">
+            download magazine
+            <img src="images/thumbnails/border-right.png" alt="border">
+        </a>
+    </div>
+    </div>
+    </div>
+</section>
 <section>twitter</section>
 <section>map</section>
 <footer></footer>
