Addition of map

--- a/index.html
+++ b/index.html
@@ -254,9 +254,101 @@
     </div>
     </div>
 </section>
-<section>twitter</section>
-<section>map</section>
-<footer></footer>
+<section class="twitter">
+    <div class="container">
+    <div class="twitter-topic">
+    Tim Vandim <span class="grey">via Twitter</span>
+    </div>
+    <div class="twitter-text">
+    Lorem ipsum dolor sit amet, <a href="#" class="twitter-link">@unishop</a>
+    consectetur adipiscing elit.
+    Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie
+    vehicula. Sed auctor neque eu tellus rhoncus ut.
+    </div>
+    </div>
+</section>
+<section class="map">
+    <div class="locator">
+        <p>Worldwide store locator</p>
+    </div>
+    <div class="container">
+    <div class="zip-address-wrapper">
+        <span class="location-icon"></span>
+        <label for="zipAddress"></label>
+        <input type="text" class="zip-address" placeholder="ZIP-code or Address" id="ZipAddress">
+    </div>
+        <div class="rangeFinder">
+            <label for="range">radius:</label>
+            <select class="range" id="range">
+                <option>40 Miles</option>
+                <option>35 Miles</option>
+                <option>30 Miles</option>
+                <option>25 Miles</option>
+                <option>20 Miles</option>
+                <option>15 Miles</option>
+                <option>10 Miles</option>
+                <option>5 Miles</option>
+            </select>
+        </div>
+    <div class="search-radius-button-wrapper">
+        <button type="button" class="search-radius-button">Find a Store</button>
+    </div>
+    </div>
+</section>
+<footer>
+    <div class="socialFeed">
+        <p>unishop</p>
+        <p>Your about us information<br/>would fit here nicely.</p>
+        <div class="socialIcons">
+            <div class="Line1Icons">
+                <a class="Icon" href="#"></a>
+                <a class="Icon" href="#"></a>
+                <a class="Icon" href="#"></a>
+            </div>
+            <div class="Line2Icons">
+                <a class="Icon" href="#"></a>
+                <a class="Icon" href="#"></a>
+                <a class="Icon" href="#"></a>
+            </div>
+            <a class="Icon" href="#"></a>
+        </div>
+    </div>
+    <div class="linksEnd">
+        <h4>links</h4>
+        <ul class="linksMain">
+            <li><a href="#" class="linksPosition">About Us</a></li>
+            <li><a href="#" class="linksPosition">Terms & Conditions</a></li>
+            <li><a href="#" class="linksPosition">Customers Service</a></li>
+            <li><a href="#" class="linksPosition">Careers</a></li>
+        </ul>
+    </div>
+    <div class="BlEnd">
+        <h4>Blogs</h4>
+        <p class="ghostHead">Article Headline fit here perfectly</p>
+        <p class="ghostly">Nulla facilisi. Duis aliquet egestas purus
+            in blandit. Curabitur vulputate, ligula lacinia scelerisque
+        </p>
+        <p class="ghostHead">Article Headline fit here perfectly</p>
+        <p class="ghostly">Nulla facilisi. Duis aliquet egestas purus
+            in blandit. Curabitur vulputate, ligula lacinia scelerisque
+        </p>
+    </div>
+    <div class="lastForms">
+        <h4>newslatter</h4>
+        <div class="subscription">
+                <form class="form-horizontal">
+                    <label class="label-control" for="email"></label>
+                    <input type="email" class="form-control" id="email" placeholder="Putt your E-Mail">
+                </form>
+                <label for="gender"></label>
+                <select class="form-control" id="gender">
+                    <option>Women's</option>
+                    <option>Men's</option>
+                </select>
+            <button type="button" class="btn">Subscribe</button>
+        </div>
+    </div>
+</footer>
 <script src="js/jquery-1.12.2.min.js"></script>
 <script src="js/scripts.js"></script>
 </body>
