--- a/index.html
+++ b/index.html
@@ -303,55 +303,51 @@
     <div class="container">
         <div class="footer-wrapper">
     <div class="footer-social-links">
-        <p>unishop</p>
+        <h1>unishop</h1>
         <p>Your about us information<br/>would fit here nicely.</p>
-        <div class="socialIcons">
-            <div class="Line1Icons">
-                <a class="icon-link" href="#"></a>
-                <a class="icon-link" href="#"></a>
-                <a class="icon-link" href="#"></a>
-            </div>
-            <div class="Line2Icons">
-                <a class="icon-link" href="#"></a>
-                <a class="icon-link" href="#"></a>
-                <a class="icon-link" href="#"></a>
-            </div>
-            <a class="Icon" href="#"></a>
-        </div>
-    </div>
-    <div class="linksEnd">
-        <h4>links</h4>
-        <ul class="linksMain">
-            <li><a href="#" class="linksPosition">About Us</a></li>
-            <li><a href="#" class="linksPosition">Terms & Conditions</a></li>
-            <li><a href="#" class="linksPosition">Customers Service</a></li>
-            <li><a href="#" class="linksPosition">Careers</a></li>
+        <ul>
+            <li><a class="icon-link icon-instagram" href="#"></a></li>
+            <li><a class="icon-link icon-twitter" href="#"></a></li>
+            <li><a class="icon-link icon-tube" href="#"></a></li>
+            <li><a class="icon-link icon-vibe" href="#"></a></li>
+            <li><a class="icon-link icon-cloud" href="#"></a></li>
+            <li><a class="icon-link icon-google" href="#"></a></li>
+            <li><a class="icon-link icon-b" href="#"></a></li>
         </ul>
     </div>
-    <div class="BlEnd">
-        <h4>Blogs</h4>
-        <p class="ghostHead">Article Headline fit here perfectly</p>
-        <p class="ghostly">Nulla facilisi. Duis aliquet egestas purus
-            in blandit. Curabitur vulputate, ligula lacinia scelerisque
+    <div class="footer-general-links">
+        <h1>links</h1>
+        <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Customers Service</a></li>
+            <li><a href="#">Careers</a></li>
+        </ul>
+    </div>
+    <div class="footer-blogs">
+        <h1>Blogs</h1>
+        <h3>Article Headline fit here perfectly</h3>
+        <p>Nulla facilisi. Duis aliquet egestas purus in blandit.
+            Curabitur vulputate, ligula lacinia scelerisque
         </p>
-        <p class="ghostHead">Article Headline fit here perfectly</p>
-        <p class="ghostly">Nulla facilisi. Duis aliquet egestas purus
-            in blandit. Curabitur vulputate, ligula lacinia scelerisque
+        <h3>Article Headline fit here perfectly</h3>
+        <p>Nulla facilisi. Duis aliquet egestas purus in blandit.
+            Curabitur vulputate, ligula lacinia scelerisque
         </p>
     </div>
     <div class="subscription-forms">
-        <h4>newslatter</h4>
+        <h1>newslatter</h1>
         <div class="subscription">
-                <form class="form-horizontal">
-                    <label class="label-control" for="email"></label>
-                    <input type="email" class="form-control" id="email" placeholder="Putt your E-Mail">
+                <form>
+                    <label for="email"></label>
+                    <input type="email" id="email" placeholder="Putt your E-Mail">
                 </form>
                 <label for="gender"></label>
                 <select id="gender">
                     <option>Women's</option>
                     <option>Men's</option>
                 </select>
-            <button type="button" class="btn">Subscribe</button>
+            <button type="button" class="subscription-button">Subscribe</button>
         </div>
     </div>
         </div>
