navbar for mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UNISHOP</title>
 </head>
 <body>
@@ -54,6 +55,9 @@
 </header>
 <nav>
     <div class="container">
+        <div class="mobile-button">
+            <div class="mobile-button-image"></div>
+        </div>
         <ul>
             <li><a href="#">Women</a></li>
             <li><a href="#">Men</a></li>
