start of perfect pixelling

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <title>UNISHOP</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -29,18 +29,12 @@
         <div class="currency">
             <div class="flag"></div>
 						<!--TODO: remove select and label; replace these with dives-->
-            <div>
-                <label for="currency"></label>
-                <select id="currency">
-                    <option value="1">&#163; GBP</option>
-                    <option value="2">&#8364; EUR</option>
-                    <option value="3">$ AUD</option>
-                    <option value="4">$ USD</option>
-                </select>
+            <div id="currency">
+                <div>United Kingdom, &#163; GBP</div>
             </div>
         </div>
 				<ul class="account-info">
-						<li class="account"><a href="#">My account</a></li>
+						<li class="account"><a href="#">My Account</a></li>
 						<li class="desktop-visible"><a href="#">Saved items</a></li>
 						<li class="cart">
 							<a href="#">Cart</a>
