--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<li class="desktop-visible"><a href="#">Saved items</a></li>
 						<li class="cart">
 							<a href="#">Cart</a>
-							<span class="cart-quantity">0</span>
+							<span class="cart-quantity">(0)</span>
 							<span class="total-sum">$0.00</span>
 						</li>
 				</ul>
@@ -58,7 +58,7 @@
             <li><a href="#">Locator</a></li>
         </ul>
         <div class="search-wrapper">
-            <form id="newsearch">
+            <form>
                 <input type="text" id="search" class="search-input" placeholder="Search please">
 								<button type="submit" class="search-button"></button>
             </form>
