--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
         </div>
         <div class="goods-main-block">
             <div class="goods-block">
+                <div class="adv-picture-text">
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+                    Curae Proin velante a orci tempus eleifend ut et
+                </div>
                 <div class="boot1-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">Dark Brogues</p>
