finishing moves for pixels

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <div class="container">
     <div class="zip-address-wrapper">
         <span class="location-icon"></span>
-        <input type="text" class="zip-address" placeholder="ZIP-code or Address" id="ZipAddress">
+        <input type="text" class="zip-address" placeholder="Zip-code or Address" id="ZipAddress">
     </div>
         <div class="range-radius">
             <label for="range">radius:</label>
@@ -326,11 +326,11 @@
         <h1>Blogs</h1>
         <h3>Article Headline fit here perfectly</h3>
         <p>Nulla facilisi. Duis aliquet egestas purus in blandit.
-            Curabitur vulputate, ligula lacinia scelerisque
+            Curabitur vulputate,
         </p>
         <h3>Article Headline fit here perfectly</h3>
         <p>Nulla facilisi. Duis aliquet egestas purus in blandit.
-            Curabitur vulputate, ligula lacinia scelerisque
+            Curabitur vulputate,
         </p>
     </div>
     <div class="subscription-forms">
