--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <div class="prev"></div>
             <div class="next"></div>
             <ul class="content">
-                <li id="photo1" class="carousel-element active"><div class="carousel-image-1"></div></li>
-                <li id="photo2" class="carousel-element"><div class="carousel-image-2"></div></li>
-                <li id="photo3" class="carousel-element"><div class="carousel-image-3"></div></li>
+                <li><div class="carousel-image-1">1</div></li>
+                <li><div class="carousel-image-2">2</div></li>
+                <li><div class="carousel-image-3">3</div></li>
             </ul>
         </div>
     </div>
