tablet header correction

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <title>UNISHOP</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -30,7 +30,7 @@
             <div class="flag"></div>
 						<!--TODO: remove select and label; replace these with dives-->
             <div id="currency">
-                <div>United Kingdom, &#163; GBP</div>
+                <div><span class="desktop-visible">United Kingdom, </span>&#163; GBP</div>
             </div>
         </div>
 				<ul class="account-info">
