finished tablet view

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="footer-wrapper">
     <div class="footer-social-links">
         <h1>unishop</h1>
-        <p>Your about us information<br/>would fit here nicely.</p>
+        <p>Your about us information would fit here nicely.</p>
         <ul>
             <li><a class="icon-link icon-instagram" href="#"></a></li>
             <li><a class="icon-link icon-twitter" href="#"></a></li>
