started mobile view

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
         <div class="search-wrapper">
             <form>
                 <input type="text" id="search" class="search-input" placeholder="Search please">
-								<button type="submit" class="search-button"></button>
+                <button type="submit" class="search-button"></button>
             </form>
         </div>
+        <a class="cart-mobile"></a>
+        <a class="account-mobile"></a>
         <div class="clear"></div>
     </div>
 </nav>
@@ -70,7 +72,10 @@
     <div class="container">
         <div class="carousel-wrapper">
             <ul class="content">
-                <li><div class="carousel-image-1">1</div></li>
+                <li><div class="carousel-image-1">
+                    <div class="carousel-text-1">Gentlemen,<br/>this way please</div>
+                    <button type="submit" class="carousel-mobile-button">View Collection</button>
+                </div></li>
                 <li><div class="carousel-image-2">2</div></li>
                 <li><div class="carousel-image-3">3</div></li>
             </ul>
