almost finished mobile view

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <section class="goods">
     <div class="container">
             <div class="goods-topic">
-                Popular products
+                <p>Popular products</p>
             </div>
         <div class="goods-subtopic">
             View All
@@ -168,7 +168,7 @@
             </div>
         </div>
             <div class="goods-topic recent">just arrived</div>
-        <div class="goods-subtopic">
+        <div class="goods-subtopic recent-subtopic">
             View All
         </div>
         <div class="goods-main-block">
@@ -190,7 +190,7 @@
                 </div>
                 <a href="#" class="add-to-cart">Add to Cart</a>
             </div>
-            <div class="goods-block">
+            <div class="goods-block special-margin-1">
                 <div class="new">new</div>
                 <div class="boot7-pic goods-pic"></div>
                 <div class="price-tag">
@@ -200,7 +200,7 @@
                 </div>
                 <a href="#" class="add-to-cart">Add to Cart</a>
             </div>
-            <div class="goods-block">
+            <div class="goods-block special-margin-2">
                 <div class="boot8-pic goods-pic"></div>
                 <div class="price-tag">
                     <p class="price-name">dark brogues</p>
