finished mobile view

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <img src="images/thumbnails/border-right.png" alt="border">
                 </a>
             </div>
-            <div class="social-line"></div>
+            <div class="social-line line-1"></div>
     <div class="social-block">
         <div class="social-image-2"></div>
         <div class="social-topic">
@@ -244,7 +244,7 @@
             <img src="images/thumbnails/border-right.png" alt="border">
         </a>
     </div>
-            <div class="social-line"></div>
+            <div class="social-line line-2"></div>
     <div class="social-block">
         <div class="social-image-3"></div>
         <div class="social-topic">
@@ -315,7 +315,7 @@
             <li><a class="icon-link icon-vibe" href="#"></a></li>
             <li><a class="icon-link icon-cloud" href="#"></a></li>
             <li><a class="icon-link icon-google" href="#"></a></li>
-            <li><a class="icon-link icon-b" href="#"></a></li>
+            <li class="mobile-visible"><a class="icon-link icon-b" href="#"></a></li>
         </ul>
     </div>
     <div class="footer-general-links">
